# pipe-stock-analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-TW.md  compose.openconnector.yaml  compose.yaml  pyproject.toml
scripts/: set-finnhub-key.sh
skills/stock-analysis/: SKILL.md
skills/taiwan-stock-analysis/: SKILL.md
src/finance_mcp/: __init__.py  action_client.py  config.py  direct_action.py  oauth.py  open_connector.py  server.py
src/finance_mcp/analytics/: __init__.py  chip.py  financial_health.py  fundamental.py  margin.py  technical.py
src/finance_mcp/infra/: __init__.py  cache.py  http.py  logging.py
src/finance_mcp/providers/: __init__.py  announcements.py  finmind.py  finnhub.py  news.py  tpex.py  twse.py
tests/: conftest.py  test_action_client.py  test_direct_action.py  test_finmind.py  test_finnhub.py  test_oauth_cimd.py  test_open_connector.py  test_smoke.py  test_transport_security.py  test_twse_market_breadth.py
